disable UI testing in pom

--- a/as/tests/org.jboss.tools.as.test.core/pom.xml
+++ b/as/tests/org.jboss.tools.as.test.core/pom.xml
@@ -37,6 +37,8 @@
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tychoVersion}</version>
+				<useUIHarness>false</useUIHarness>
+				<useUIThread>false</useUIThread>
 				<configuration>
 					<testSuite>org.jboss.tools.as.test.core</testSuite>
 					<testClass>org.jboss.tools.as.test.core.ASToolsTestSuite</testClass>
